[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Textures/Switch.png" type="Texture" id=1]
[ext_resource path="res://GameObjects/Interactable/SwitchTile/SwitchTile.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/SFX/switch.wav" type="AudioStream" id=3]
[ext_resource path="res://GameObjects/Interactable/SwitchTile/NumberStateSwitchAnimation.tres" type="Animation" id=4]
[ext_resource path="res://GameObjects/Interactable/SwitchTile/SwitchTileReaderStateSwitchAnimation.tres" type="Animation" id=5]
[ext_resource path="res://GameObjects/Interactable/SwitchTile/ReaderStateActivate.tres" type="Animation" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/Switch.png-e2ee033a5b0254eeab952b291e6edf90.stex"

[sub_resource type="Animation" id=3]
resource_name = "NumberStateActivate"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("SmallIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmallIcon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SmallIcon:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SmallIcon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SmallIcon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Switch" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 2

[node name="SmallIcon" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -3.2 )
texture = SubResource( 2 )
hframes = 3
vframes = 2
frame = 5

[node name="SwitchSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "NumberStateSwitchAnimation"
anims/NumberStateSwitchAnimation = ExtResource( 4 )
anims/ReaderStateSwitchAnimation = ExtResource( 5 )

[node name="Anim2" type="AnimationPlayer" parent="."]
anims/NumberStateActivate = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/ReaderStateActivate = ExtResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Switch_body_entered"]
